--- a/app/views/wall/templates/coa.html
+++ b/app/views/wall/templates/coa.html
@@ -14,7 +14,7 @@
         <!-- Metadata -->
         <div class="metadata col-xs-12">
             <a class="name" ng-href="{{'https://twitter.com/' + data.user.screen_name}}">{{data.user.name}}</a>
-            <span class="screen-name">{{ "@hbhb" + data.user.screen_name}}</span>
+            <span class="screen-name">{{ "@" + data.user.screen_name}}</span>
             <span><i class="fa fa-twitter"></i></span>
             <span class="created-at"> • {{data.created_at | tweetFromNow }}</span>
         </div>
