--- a/app/views/advancedsearch.html
+++ b/app/views/advancedsearch.html
@@ -96,16 +96,49 @@
 <!-- Output result here -->
 <div ng-show="advanced.isResultShow" class="search-container advanced-result-container">
 	<div class="content-container">
-		<h3 class="final-search-term">Search options : <span>{{advanced.finalParams.q}}</span></h3>
+		<h3 class="final-search-term">Search options : <span>{{advanced.finalParams.q}} </span><span ng-show="advanced.filterMessage">{{advanced.filterMessage}}</span></h3>
 		<h3 class="result-message">
-			<span>{{advanced.resultMessage}}</span>
+			<span ng-show="advanced.resultMessage">{{advanced.resultMessage}}</span>
 			<div class="create-new-search"><span ng-click="advanced.initNewSearchView()">New search</span></div>
 		</h3>
 		<div class="result-container">
-			<div class="main-result-container">
-			    <div ng-repeat="status in advanced.currentResult" status data="status"></div>   
-			</div>	
-		</div>		
+			<div class="filters-container">
+			    <ul class="search-modes">
+			        <!-- General filters -->
+			        <li  ng-class="(advanced.currentFilter === 'live') ? 'active' : ''" ng-click="advanced.filterLive()">
+			            <a href="#">live</a>
+			        </li>
+			        <li  ng-class="(advanced.currentFilter === 'accounts') ? 'active' : ''" ng-click="advanced.filterAccounts()">
+			            <a href="#">accounts</a>
+			        </li>
+			        <li  ng-class="(advanced.currentFilter === 'photos') ? 'active' : ''" ng-click="advanced.filterPhotos()">
+			            <a href="#">photos</a>
+			        </li>
+			        <li ng-class="(advanced.currentFilter === 'videos') ? 'active' : ''" ng-click="advanced.filterVideos()">
+			            <a href="#">videos</a>
+			        </li>
+			        <li ng-class="(advanced.currentFilter === 'map') ? 'active' : ''" ng-click="advanced.filterMap()">
+			            <a href="#">map</a>
+			        </li>
+			    </ul>
+			</div>
+
+			<div ng-show="!advanced.mapSearch" class="advanced-normal-result">
+				<div ng-show="!advanced.peopleSearch" class="main-result-container">
+				    <div ng-repeat="status in advanced.currentResult" status data="status"></div>   
+				</div>	
+
+				<div ng-show="advanced.peopleSearch" class="main-result-container">
+				    <div ng-repeat="account in advanced.accounts" account data="account"></div>
+				</div>
+			</div>
+
+			<!-- Map search -->
+			
+		</div>	
+		<div ng-show="advanced.mapSearch" class="advanced-search-map-wrapper search-map-wrapper">
+		    <div id="advanced-search-map" style="width:100%; height:100vh;"></div>
+		</div>	
 	</div>
 </div>
 
