--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1909,3 +1909,34 @@
 			}
 		}
 	}
+/* End style for advanced searc */
+
+
+/* Style for map pop up */
+	.leaflet-popup-content {
+		width: auto !important;
+		p {
+			margin: 0 !important;
+		}
+	}
+	.single-tweet.map-tweet {
+		margin: 0;
+		padding: 0;
+		min-width: 250px;
+		.top-metadata {
+			img.avatar {
+				height: 55px;
+				width: 55px;
+			}
+			.user-data-wrapper {
+				display: inline-block;
+				font-size: 11px;
+				margin-left: 20px;
+				padding: 0;
+			}
+		}
+		.detail-metadata {
+			margin-top: 10px;
+		}
+	}
+/* End style for map pop up */
