Style changes for header & search view

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -38,6 +38,7 @@
                         </li>
                         <li><a href="#">More options</a></li>
                     </ul>
+                    <div class="result-filters-separator"></div>
                 </div>
 
                 <!-- New status from background updating process -->
