--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -131,12 +131,6 @@
 <header ng-if="!root.sidebarEnabled" class="main-header">
     <nav class="navbar navbar-static-top">
         <div class="container">
-            <div class="navbar-header">
-                <a href="/" class="navbar-brand"><code>Loklak</code></a>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-            </div>
             <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li ng-repeat="navItem in root.topNavItems">
@@ -151,7 +145,7 @@
                 <ul class="nav navbar-nav">
                     <form class="navbar-form navbar-left" role="search" action="/search" >
                         <div class="form-group">
-                            <input type="text" class="form-control" id="navbar-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
+                            <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
                         </div>
                     </form>
                 </ul>
@@ -164,7 +158,7 @@
                     </li> -->
                 </ul>
                 <ul class="nav navbar-nav" ng-if="root.twitterSession">
-                    <li style="margin-top:15%;">
+                    <li>
                     <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" style="background-color:#339DC3;color:white;">
                   <span class="fa fa-twitter"></span>
                   <span class="text">Tweet</span>
