--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,34 +9,48 @@
 /* Admin LTE */
 /* Topnav */
 
-.universal-search {
-    display: inline-block;
-}
-#navbar-search-input {
-	color: white;
-	&:focus {
-		color: rgb(85,85,85);
+	.universal-search {
+	    display: inline-block;
 	}
-}
 
-.navbar .navbar-form {
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-right: 0;
-    margin-left: 0;
-    border: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    float: none;
-}
-.main-header #navbar-search-input
-{
-	width:auto;
-	border-radius:21px;
-}
-#brandimage{
-    margin-top: -15px;
-}
+	#global-search-input { 
+		color: #292f33;
+		background-color: #f5f8fa;
+		border: 1px solid #e1e8ed;
+		border-radius: 13px;
+		width: auto;
+		padding: 8px;
+		min-width: 199px;
+		&:focus {
+			color: #292f33;
+			text-shadow: none;
+			background-color: #fff;
+			box-shadow: none;
+			opacity: 1;
+			outline: none;
+		}
+	}
+
+	.navbar .navbar-form {
+	    padding-top: 0;
+	    padding-bottom: 0;
+	    margin-right: 0;
+	    margin-left: 0;
+	    border: 0;
+	    -webkit-box-shadow: none;
+	    box-shadow: none;
+	    float: none;
+
+	}
+	#home-view-user-avatar {
+		height: 40px;
+		margin-top: 5px;
+		border-radius: 5px;
+	}
+	#global-new-tweet-button {
+		height: 40px;
+		margin-top: 5px;
+	}
 
 // Twitter sign in
 	.signin-twitter {
@@ -77,305 +91,313 @@
 	}
 /* Old styles */
 
-body {
-    font-family: Helvetica, sans-serif;
-    background-color: #F5F8FA;
-}
+	body {
+	    font-family: Helvetica, sans-serif;
+	    background-color: #F5F8FA;
+	}
 
-.navbar {
-    background-color: $background-top;
-    border: 0;
-    .navbar-brand {
-        color: #fff;
-    }
-}
 
-.side {
-    .side-block {
-        background-color: $background-dark;
-        -moz-border-radius: 4px;
-        -webkit-border-radius: 4px;
-        border-radius: 4px;
-        -khtml-border-radius: 4px;
-        padding: 20px;
-    }
-}
+	.navbar {
+	    background-color: white !important;
+	 	.navbar-collapse {
+	 		a {
+	 			transition: all .15s ease-in-out;
+	 			color: black !important;
+	 			padding-bottom: 10px;
+	 			&:hover {
+	 				transition: all .15s ease-in-out;
+	 				border-bottom: 5px solid #0084b4 !important;
+	 			}
+	 		}
+	 	}  
+	}
 
-.status {
-    padding-bottom: 10px;
-    border-bottom: 1px solid $border-light;
-    margin-bottom: 20px;
-    &.highlight {
-        .inner {
-            margin-left: 218px;
-            .header {
-                .user-avatar {
-                    width: 200px;
-                    height: 200px;
-                    margin-left: -218px;
-                }
-            }
-            .content {
-                font-size: 20px;
-            }
-        }
-    }
-    .inner {
-        margin-left: 58px;
-        .header {
-            .user-avatar {
-                float: left;
-                margin-top: 3px;
-                margin-left: -58px;
-                width: 48px;
-                height: 48px;
-                border-radius: 5px;
-                -moz-force-broken-image-icon: 1;
-            }
-        }
-    }
-}
+	.side {
+	    .side-block {
+	        background-color: $background-dark;
+	        -moz-border-radius: 4px;
+	        -webkit-border-radius: 4px;
+	        border-radius: 4px;
+	        -khtml-border-radius: 4px;
+	        padding: 20px;
+	    }
+	}
 
-.masonry-brick {
-    width: 33.2%;
-    padding: 5px;
-}
+	.status {
+	    padding-bottom: 10px;
+	    border-bottom: 1px solid $border-light;
+	    margin-bottom: 20px;
+	    &.highlight {
+	        .inner {
+	            margin-left: 218px;
+	            .header {
+	                .user-avatar {
+	                    width: 200px;
+	                    height: 200px;
+	                    margin-left: -218px;
+	                }
+	            }
+	            .content {
+	                font-size: 20px;
+	            }
+	        }
+	    }
+	    .inner {
+	        margin-left: 58px;
+	        .header {
+	            .user-avatar {
+	                float: left;
+	                margin-top: 3px;
+	                margin-left: -58px;
+	                width: 48px;
+	                height: 48px;
+	                border-radius: 5px;
+	                -moz-force-broken-image-icon: 1;
+	            }
+	        }
+	    }
+	}
 
-.masonry-brick img {
-    display: block;
-    width: 100.5%;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
-}
+	.masonry-brick {
+	    width: 33.2%;
+	    padding: 5px;
+	}
 
-.evaluation {
-    > div.row {
-        text-align: center;
-    }
-    form {
-        display: inline-block;
-    }
-}
+	.masonry-brick img {
+	    display: block;
+	    width: 100.5%;
+	    -webkit-border-radius: 4px;
+	    -moz-border-radius: 4px;
+	    -khtml-border-radius: 4px;
+	    border-radius: 4px;
+	}
 
-.eval-widget {
-    .item {
-        min-height: 42px;
-    }
-    margin-top: 50px;
-    padding: 15px;
-    h1 {
-        text-align: center;
-    }
-    border: 1px solid #b4b4b4;
-    border-radius: 7px;
-    .item {
-        position: relative;
-        margin-top: 11px;
-    }
-    p {
-        display: inline-block;
-        position: relative;
-        z-index: 200;
-        font-size: 16px;
-        margin-top: 10px;
-        margin-left: 25px;
-    }
-    .percentage {
-        float: right;
-        display: inline-block;
-        position: relative;
-        z-index: 200;
-        font-size: 16px;
-        margin-top: 10px;
-        margin-right: 15px;
-    }
-    .percent-bar {
-        position: absolute;
-        z-index: 100;
-        left: 15px;
-        height: 100%;
-        border-radius: 5px;
-    }
-}
+	.evaluation {
+	    > div.row {
+	        text-align: center;
+	    }
+	    form {
+	        display: inline-block;
+	    }
+	}
 
-.tweeters .percent-bar {
-    background-color: #9BD5BB;
-}
+	.eval-widget {
+	    .item {
+	        min-height: 42px;
+	    }
+	    margin-top: 50px;
+	    padding: 15px;
+	    h1 {
+	        text-align: center;
+	    }
+	    border: 1px solid #b4b4b4;
+	    border-radius: 7px;
+	    .item {
+	        position: relative;
+	        margin-top: 11px;
+	    }
+	    p {
+	        display: inline-block;
+	        position: relative;
+	        z-index: 200;
+	        font-size: 16px;
+	        margin-top: 10px;
+	        margin-left: 25px;
+	    }
+	    .percentage {
+	        float: right;
+	        display: inline-block;
+	        position: relative;
+	        z-index: 200;
+	        font-size: 16px;
+	        margin-top: 10px;
+	        margin-right: 15px;
+	    }
+	    .percent-bar {
+	        position: absolute;
+	        z-index: 100;
+	        left: 15px;
+	        height: 100%;
+	        border-radius: 5px;
+	    }
+	}
 
-.mentions .percent-bar {
-    background-color: #87AFCC;
-}
+	.tweeters .percent-bar {
+	    background-color: #9BD5BB;
+	}
 
-.tags .percent-bar {
-    background-color: #D6A6BC;
-}
+	.mentions .percent-bar {
+	    background-color: #87AFCC;
+	}
 
-.date-input {
-    min-width: 275px;
-}
+	.tags .percent-bar {
+	    background-color: #D6A6BC;
+	}
 
-.wall {
-    margin-top: -70px;
-}
+	.date-input {
+	    min-width: 275px;
+	}
 
-.wall-search {
-    width: 400px;
-    margin: 0 auto;
-    text-align: center;
-    form {
-        display: inline-block;
-    }
-}
+	.wall {
+	    margin-top: -70px;
+	}
 
-.wall-display {
-    h1 {
-        text-align: center;
-        font-size: 100px;
-    }
-    .status-list {
-        margin-top: 60px;
-    }
-}
+	.wall-search {
+	    width: 400px;
+	    margin: 0 auto;
+	    text-align: center;
+	    form {
+	        display: inline-block;
+	    }
+	}
 
-.animate-repeat.ng-enter,
-.animate-repeat.ng-leave {
-    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    position: relative;
-    display: block;
-    overflow: hidden;
-    text-overflow: clip;
-    white-space: nowrap;
-}
+	.wall-display {
+	    h1 {
+	        text-align: center;
+	        font-size: 100px;
+	    }
+	    .status-list {
+	        margin-top: 60px;
+	    }
+	}
 
-.animate-repeat.ng-leave.ng-leave-active,
-.animate-repeat.ng-enter {
-    opacity: 0;
-    height: 0px;
-}
+	.animate-repeat.ng-enter,
+	.animate-repeat.ng-leave {
+	    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	    position: relative;
+	    display: block;
+	    overflow: hidden;
+	    text-overflow: clip;
+	    white-space: nowrap;
+	}
 
-.animate-repeat.ng-enter.ng-enter-active,
-.animate-repeat.ng-leave {
-    opacity: 1;
-    height: 200px;
-}
+	.animate-repeat.ng-leave.ng-leave-active,
+	.animate-repeat.ng-enter {
+	    opacity: 0;
+	    height: 0px;
+	}
 
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+	.animate-repeat.ng-enter.ng-enter-active,
+	.animate-repeat.ng-leave {
+	    opacity: 1;
+	    height: 200px;
+	}
 
-#wrapper.toggled {
-    padding-left: 250px;
-}
+	#wrapper {
+	    padding-left: 0;
+	    -webkit-transition: all 0.5s ease;
+	    -moz-transition: all 0.5s ease;
+	    -o-transition: all 0.5s ease;
+	    transition: all 0.5s ease;
+	}
 
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #000;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+	#wrapper.toggled {
+	    padding-left: 250px;
+	}
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
+	#sidebar-wrapper {
+	    z-index: 1000;
+	    position: fixed;
+	    left: 250px;
+	    width: 0;
+	    height: 100%;
+	    margin-left: -250px;
+	    overflow-y: auto;
+	    background: #000;
+	    -webkit-transition: all 0.5s ease;
+	    -moz-transition: all 0.5s ease;
+	    -o-transition: all 0.5s ease;
+	    transition: all 0.5s ease;
+	}
 
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-}
+	#wrapper.toggled #sidebar-wrapper {
+	    width: 250px;
+	}
 
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-/* Sidebar Styles */
+	#page-content-wrapper {
+	    width: 100%;
+	    position: absolute;
+	    padding: 15px;
+	}
 
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+	#wrapper.toggled #page-content-wrapper {
+	    position: absolute;
+	    margin-right: -250px;
+	}
+	/* Sidebar Styles */
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
+	.sidebar-nav {
+	    position: absolute;
+	    top: 0;
+	    width: 250px;
+	    margin: 0;
+	    padding: 0;
+	    list-style: none;
+	}
 
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-}
+	.sidebar-nav li {
+	    text-indent: 20px;
+	    line-height: 40px;
+	}
 
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255, 255, 255, 0.2);
-}
+	.sidebar-nav li a {
+	    display: block;
+	    text-decoration: none;
+	    color: #999999;
+	}
 
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
+	.sidebar-nav li a:hover {
+	    text-decoration: none;
+	    color: #fff;
+	    background: rgba(255, 255, 255, 0.2);
+	}
 
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
+	.sidebar-nav li a:active,
+	.sidebar-nav li a:focus {
+	    text-decoration: none;
+	}
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
+	.sidebar-nav > .sidebar-brand {
+	    height: 65px;
+	    font-size: 18px;
+	    line-height: 60px;
+	}
 
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
+	.sidebar-nav > .sidebar-brand a {
+	    color: #999999;
+	}
 
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-    #sidebar-wrapper {
-        width: 250px;
-    }
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
+	.sidebar-nav > .sidebar-brand a:hover {
+	    color: #fff;
+	    background: none;
+	}
+
+	@media(min-width:768px) {
+	    #wrapper {
+	        padding-left: 250px;
+	    }
+	    #wrapper.toggled {
+	        padding-left: 0;
+	    }
+	    #sidebar-wrapper {
+	        width: 250px;
+	    }
+	    #wrapper.toggled #sidebar-wrapper {
+	        width: 0;
+	    }
+	    #page-content-wrapper {
+	        padding: 20px;
+	        position: relative;
+	    }
+	    #wrapper.toggled #page-content-wrapper {
+	        position: relative;
+	        margin-right: 0;
+	    }
+	}
 /* Styling for SEARCH FRONT END */
 
 .content-wrapper {
@@ -758,7 +780,6 @@ body {
 			}
 
 			.result-container {
-				border: 1px solid $search-grey-border;
 				padding: 0;
 				.more-result {
 						width: 100%;
@@ -1099,11 +1120,16 @@ body {
 
 /* Search filters */
 	.filters-container {
-		height: 46px;
 		position: relative;
 		z-index: 100;
-		background: rgba(245, 248, 250, 0.5);
+		background: white;
+		border-radius: 5px;
 		text-align: center;
+		.result-filters-separator {
+			width: 100%;
+			height: 10px;
+			background-color: #F5F8FA;
+		}
 		ul li {
 			display: inline-block;
 			position: relative;
