--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -1,31 +1,10 @@
 <ul class="nav navbar-nav pull-right">
-	<li class="dropdown user user-menu" ng-show="twitterSession" ng-show="twitterSession" style="margin-right: 20px;">
-		<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-			<img ng-src="{{twitterSession.profile_image_url_https}}" class="user-image" alt="{{twitterSession.name}}">
-			<span class="hidden-xs">{{twitterSession.name}}</span>
-		</a>
-		<ul class="dropdown-menu">
-			<!-- Menu Footer-->
-			<li class="user-header">
-				<img ng-src="{{twitterSession.profileURL}}" alt="" class="img-circle">
-				<p>{{twitterSession.name}}</p>
-			</li>
-			<li class="user-footer">
-				<div class="col-lg-4 col-md-4">
-					<a href="#" class="btn btn-default btn-flat">Profile</a>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<a href="#" class="btn btn-default btn-flat">Settings</a>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<a ng-click="hello('twitter').logout()" class="btn btn-default btn-flat">Sign out</a>
-				</div>
-			</li>
-		</ul>
+	<li ng-show="twitterSession" style="margin-right: 20px;">
+			<img id="home-view-user-avatar" ng-src="{{twitterSession.profile_image_url_https}}" class="user-image" alt="{{twitterSession.name}}">
 	</li>
 </ul>
 
-<ul class=nav navbar-nav>
+<ul class="nav navbar-nav">
 	<li ng-show="!twitterSession" class="signin">
 		<a href="" style="padding-top: 0px;padding-left: 0px;padding-right: 0px;padding-bottom: 0px;">
 			<span class="link" ng-click="#signupModal" data-target="#signupModal" style="padding-top: 4px;">
