--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,67 +1,61 @@
 <div class="content-wrapper">
     <!-- Main content -->
     <div class="container-fluid content-container">
-      <!-- Center result + option filters -->
-      <!-- Left content: Who to follow, trends -->
-      <div class="result-container col-md-3" style="margin-top:4%;">
-        <div class="home-user-info">
-            <div class="blue-background-placeholder">
-                
-            </div>
-            <div class="home-user-info-content">
-                <div class="top-content">
-                    <img ng-src="{{root.twitterSession.profile_image_url_https}}">
-                    <div class="name-and-screen-name">
-                        <span class="home-user-name">{{root.twitterSession.name}}</span><br>
-                        <span class="home-user-screen-name">@{{root.twitterSession.screen_name}}</span>
-                    </div>
+      
+        <!-- Left content: Who to follow, trends -->
+        <div class="result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
+            <div class="home-user-info">
+                <div class="blue-background-placeholder">
+                    <img ng-src="{{root.twitterSession.profile_banner_url}}" alt="user-banner-photo">    
                 </div>
-                <div class="bottom-content">
-                    <div class="user-no-tweets">
-                        <a href="">Tweets<br><span>135</span></a>
+                <div class="home-user-info-content">
+                    <div class="top-content">
+                        <img ng-src="{{root.twitterSession.profile_image_url_https}}">
+                        <div class="name-and-screen-name">
+                            <span class="home-user-name">{{root.twitterSession.name}}</span><br>
+                            <span class="home-user-screen-name">@{{root.twitterSession.screen_name}}</span>
+                        </div>
                     </div>
-                    <div class="user-no-followings">
-                        <a href="">followings<br><span>135</span></a>
-                    </div>
-                    <div class="user-no-followers">
-                        <a href="">followers<br><span>135</span></a>
+                    <div class="bottom-content">
+                        <div class="user-no-tweets">
+                            <a href="">Tweets<br><span>135</span></a>
+                        </div>
+                        <div class="user-no-followings">
+                            <a href="">followings<br><span>135</span></a>
+                        </div>
+                        <div class="user-no-followers">
+                            <a href="">followers<br><span>135</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    
 
-        <!-- 
-            {{root.twitterSession.first_name}}
-            {{root.twitterSession.location}}
-            {{root.twitterSession.description}}
-         -->
-    </div>
-    <div class="result-container col-md-6">
-        <div class="row cms-view">
-        <div class="col-md-12" ng-if="!root.twitterFriends">
-            <img src="../images/loading.gif" alt="">
-        </div>
-        <div class="col-md-12" ng-if="root.twitterSession">
+
+        <!-- Center result + option filters -->
+        <div class="result-container col-md-6" ng-show="root.twitterSession">
+            <div class="row cms-view">
                 <div class="main-result-container">
-                    <div class="box-body chat" id="chat-box" style="width: auto;">
+                    <div class="statuses-container box-body chat" id="chat-box" style="width: auto;">
                         <div ng-repeat="status in root.twitterFriends.data | limitTo: 20">
                             <div class="item">
-                                <img src="{{status.profile_image_url}}" alt="user image" class="online" style="padding-bottom:0px;">
-                                <p class="message">
-                                {{status.status.text}}
+                                <img class="friend-profile-img" src="{{status.profile_image_url}}">
+                                <p class="message home-tweet-text">
+                                <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span><br>
+                                <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted ">
+                                </span>
                                 </p>
-                                <small class="pull-left">{{status.screen_name}}</small>
-                                <hr>
-                        </div>
+                            </div>
                     </div> 
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Right content: Other statistics -->
-    <div class="result-container col-md-3">
+        <!-- Right content: Other statistics -->
+        <div class="result-container col-md-3">
+
+        </div>
+
 
     </div>
 </div>
