--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,5 +1,9 @@
 <div class="content-wrapper">
     <div class="search-container container-fluid">
+
+        <div class="title-as-current-search-term">
+            <span>{{root.globalSearchTerm}}</span>
+        </div>
         <!-- <div ng-if="!search.statuses" class="input-container container">
             <form ng-submit="search.update(term)" class="navbar-form navbar-left" role="search">
            <div class="form-group">
