Fixes #231 Ensures 0 px between underline and container area

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -959,7 +959,6 @@
 
 	.search-container {
 		.title-as-current-search-term {
-			text-align: center;
 			background-color: #55acee;
 			span {
 				display: inline-block;
@@ -2657,3 +2656,17 @@
 		}
 	}
 
+.navbar.navbar-static-top {
+	height: 50px;
+}
+
+.navbar.navbar-collapse a {
+	-webkit-transition: all .10s ease-in-out;
+	transition: all .10s ease-in-out;
+	color: black !important;
+	padding-bottom: 10px;
+}
+
+div.title-as-current-search-term > span {
+	margin-left:47%;
+}
