--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -142,14 +142,14 @@
                 <img class="hidden-xs hidden-sm hidden-md" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
             </div>
             <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" id="search">
                     <form class="navbar-form navbar-left" role="search" action="/search" >
                         <div class="form-group">
                             <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
                         </div>
                     </form>
                 </ul>
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" id="contents">
                     <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
                     <!-- <li>
                         <a ng-href="/auth/twitter" target="_self">
@@ -203,14 +203,16 @@
         <form role="form" id="tweet"  ng-submit="root.foo()"  >
         <div class="modal-body">
             <div class="modal-tweet-form-container">
-                <textarea name="tweet" id="tweet" cols="30" rows="5" class="form-control" ng-model="root.tweet"></textarea>
+                <textarea name="tweet" id="tweet" cols="30" rows="5" class="form-control" ng-model="root.tweet" ng-change="root.tweetLengthCalculate()"></textarea>
             </div>
         </div>
         <div class="modal-footer">
+            <span ng-show="root.tweetLength < 0" style="color:red;">{{root.tweetLength}}</span>
+            <span ng-show="root.tweetLength < 7 && root.tweetLength >= 0" style="color:crimson;">{{root.tweetLength}}</span>
+            <span ng-show="root.tweetLength >= 7 && root.tweetLength <= 140" style="color:green;">{{root.tweetLength}}</span>
             <input type="button" class="fa btn btn-info btn-flat pull-left" value="&#xf030; Add Photo">&nbsp;
             <input type="button" class="fa btn btn-info btn-flat pull-left" value="&#xf041; Add Location">&nbsp;
             <input type="submit" class="btn btn-info btn-flat" value="Tweet">&nbsp;
-            <button type="button" class="btn btn-default btn-flat" data-dismiss="modal">Close</button>
         </div>
         </form>
     </div>
