--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -128,68 +128,49 @@
     </nav>
 </header>
 
+<!-- Things must be available in topnavs
+- Views: <li ng-repeat="navItem in root.topNavItems">
+                        <a ng-class="(navItem.title == root.currentView) ? 'active-view-nav' : ''" ng-href="{{navItem.link}}"><span class="{{navItem.icon}}"></span>{{navItem.title}}</a>
+                    </li>
+- Loklak logo    <img class="hidden-xs hidden-sm hidden-md" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
+-  <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
+- Global search input <div class="form-group">
+                            <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
+                        </div>
+
+- Styles stuffs: min-heigt :50px; color: black; 
+-  -->
 <header ng-if="!root.sidebarEnabled" class="main-header">
-    <nav class="navbar navbar-static-top">
-        <div class="container">
-            <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-                <ul class="nav navbar-nav">
+    <div class="container topnav">
+        <div class="universal-topnav-container">
+            <div class="universal-topnav-item list-of-views">
+                <ul class="">
                     <li ng-repeat="navItem in root.topNavItems">
                         <a ng-class="(navItem.title == root.currentView) ? 'active-view-nav' : ''" ng-href="{{navItem.link}}"><span class="{{navItem.icon}}"></span>{{navItem.title}}</a>
                     </li>
                 </ul>
             </div>
-            <div class="collapse navbar-collapse pull-left" id="navbar-collapse" style="margin-left: 15%;">
-                <img class="hidden-xs hidden-sm hidden-md" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
+            <div class="universal-topnav-item topnav-logo-container">
+                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
             </div>
-            <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav" id="search">
-                    <form class="navbar-form navbar-left" role="search" action="/search" >
-                        <div class="form-group">
-                            <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
-                        </div>
-                    </form>
-                </ul>
-                <ul class="nav navbar-nav" id="contents">
-                    <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
-                    <!-- <li>
-                        <a ng-href="/auth/twitter" target="_self">
-                            <span><i style="padding-right: 4px;" class="fa fa-twitter"></i>Signup Via Twitter</span>
-                        </a>
-                    </li> -->
-                </ul>
-                <ul class="nav navbar-nav" ng-if="root.twitterSession">
+            <div class="universal-topnav-item topnav-user-actions">
+                <div class="global-search-container">
+                    <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
+                </div>
+                <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
+                <ul class="global-tweet-button-container" ng-if="root.twitterSession">
                     <li>
-                    <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" style="background-color:#339DC3;color:white;">
-                  <span class="fa fa-twitter"></span>
-                  <span class="text">Tweet</span>
-                </button>
-                </li>
+                        <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" style="background-color:#339DC3;color:white;">
+                            <span class="fa fa-twitter"></span>
+                            <span class="text">Tweet</span>
+                        </button>
+                    </li>
                 </ul>
-                <!-- <ul class="dropdown-menu">
-                  User image 
-                  <li class="user-header">
-                    <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                    <p>
-                      Alexander Pierce - Web Developer
-                      <small>Member since Nov. 2012</small>
-                    </p>
-                  </li>
-                  Menu Footer
-                  <li class="user-footer">
-                    <div class="pull-left">
-                      <a href="#" class="btn btn-default btn-flat">Profile</a>
-                    </div>
-                    <div class="pull-right">
-                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-                </ul> -->
             </div>
         </div>
-    </nav>
+    </div>
 </header>
+
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
